[gd_scene load_steps=3 format=3 uid="uid://87nw15kas0uj"]

[ext_resource type="Script" path="res://componentes/enemigo/enemigo.gd" id="1_fxtdm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i5jci"]

[node name="Enemy1" type="CharacterBody2D"]
script = ExtResource("1_fxtdm")

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
animation = &""
offset = Vector2(0, -16)

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_i5jci")

[node name="EnemyAnimation" type="AnimationPlayer" parent="."]

[node name="RightCollision" type="RayCast2D" parent="."]
position = Vector2(17, 0)
target_position = Vector2(0, 12)

[node name="LeftCollision" type="RayCast2D" parent="."]
position = Vector2(-17, 0)
target_position = Vector2(0, 12)
